<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.aarushi.crime_mappingapp.ComplaintActivity">

    <EditText
        android:id="@+id/et_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:padding="12dp"
        android:hint="@string/hint_location"
        android:inputType="text"/>

    <EditText
        android:id="@+id/crimeType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:padding="12dp"
        android:hint="@string/hint_crime_type"
        android:inputType="text"/>

    <EditText
        android:id="@+id/crimeDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:padding="12dp"
        android:hint="@string/hint_crime_description"
        android:inputType="text"/>

    <EditText
        android:id="@+id/crimeDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:padding="12dp"
        android:hint="@string/hint_crime_date"
        android:inputType="date"/>

    <EditText
        android:id="@+id/crimeTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:padding="12dp"
        android:hint="@string/hint_crime_time"
        android:inputType="time"/>

    <EditText
        android:id="@+id/isVerified"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:padding="12dp"
        android:hint="Is Crime Verified?"
        android:inputType="text"/>

    <Button
        android:id="@+id/btn_complaint"
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/button_submit"
        android:textColor="#ffffff"/>


</LinearLayout>
