<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.aarushi.crime_mappingapp.login_module.PoliceLoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="150dp"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/wcd_logo_png" />
    </LinearLayout>


    <EditText
        android:id="@+id/et_policeemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:alpha="0.3"
        android:background="@color/cardview_shadow_start_color"
        android:hint="@string/hint_email_address"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="#212121"
        android:textColorHint="#455a64"
        android:textSize="25dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/et_policepassword"
        android:hint="@string/hint_password"
        android:textColorHint="#455a64"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:background="@color/cardview_shadow_start_color"
        android:alpha="0.3"
        android:textColor="#212121"
        android:layout_margin="20dp"
        android:textSize="25dp" />

    <Button
        android:id="@+id/bt_policelogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimary"
        android:text="@string/hint_login"
        android:textColor="#ffffff"

        android:layout_margin="10dp"/>
</LinearLayout>
